--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ cryptography==44.0.2
 Django==5.1.8
 django-celery-beat==2.7.0
 django-cors-headers==4.7.0
+django-storages==1.14.6
 django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+drf-spectacular-sidecar==2025.5.1
 idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
