--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,31 @@
 {
-    "builds": [{
-        "src": "core/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
+    "version": 2,
+    "builds": [
+      {
         "src": "build_files.sh",
         "use": "@vercel/static-build",
-        "config": { "distDir": "staticfiles_build" }
-    }],
-    "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "core/wsgi.py"
+        "config": {
+          "distDir": "staticfiles_build",
+          "runtime": "python3.9"
         }
+      },
+      {
+        "src": "core/wsgi.py",
+        "use": "@vercel/python",
+        "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.9"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "core/wsgi.py"
+      }
     ]
-}
+  }
