--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
         "config": {
           "maxLambdaSize": "15mb",
           "runtime": "python3.12",
-          "installCommand": "python -m pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
+          "installCommand": "python3.12 -m pip install --upgrade pip && python3.12 -m pip install -r requirements.txt"
         }
       }
     ],
