--- a/vercel.json
+++ b/vercel.json
@@ -2,27 +2,19 @@
     "version": 2,
     "builds": [
       {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build",
-          "runtime": "python3.12"
-        }
-      },
-      {
         "src": "core/wsgi.py",
         "use": "@vercel/python",
         "config": {
-          "maxLambdaSize": "15mb",
           "runtime": "python3.12",
-          "installCommand": "python3.12 -m pip install --upgrade pip && python3.12 -m pip install -r requirements.txt"
+          "installCommand": "pip install -r requirements.txt",
+          "maxLambdaSize": "15mb"
         }
       }
     ],
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "staticfiles_build/static/$1"
+        "dest": "/static/$1"
       },
       {
         "src": "/(.*)",
